--- a/samples/BlazorServer/Pages/_Host.cshtml
+++ b/samples/BlazorServer/Pages/_Host.cshtml
@@ -1,4 +1,5 @@
-﻿@page "/"
+﻿
+@page "/"
 @namespace BlazorServer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -19,7 +20,7 @@
               crossorigin="anonymous"
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
-    <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
+    <link href="_content/ModernBlazor.Typeahead/blazored-typeahead.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -33,6 +34,6 @@
         }
     </script>
     <script src="_framework/blazor.server.js"></script>
-    <script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script>
+    <script src="_content/ModernBlazor.Typeahead/blazored-typeahead.js"></script>
 </body>
 </html>
